Первая попытка запуска генерации. Неудача. Не учтен пересчет фте для отобранных и скрещенных индивидов. По факту получился случайный перебор. Так же после отбора не стоит сразу добавлять новых индивидов. Надо их получать скрещиванием из отобранных.